<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/blue"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <TextView
            android:layout_gravity="center"
            android:text="@string/heading"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/app1_button_view"
            android:text="@string/app_1"
            android:onClick="appButton"
            android:layout_marginBottom="10dp"
            android:background="@color/darkorange"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/app2_button_view"
            android:text="@string/app_2"
            android:onClick="appButton"
            android:layout_marginBottom="10dp"
            android:background="@color/darkorange"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/app3_button_view"
            android:text="@string/app_3"
            android:onClick="appButton"
            android:layout_marginBottom="10dp"
            android:background="@color/darkorange"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/app4_button_view"
            android:text="@string/app_4"
            android:onClick="appButton"
            android:layout_marginBottom="10dp"
            android:background="@color/darkorange"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/app5_button_view"
            android:text="@string/app_5"
            android:onClick="appButton"
            android:layout_marginBottom="10dp"
            android:background="@color/darkorange"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/app6_button_view"
            android:text="@string/app_6"
            android:onClick="appButton"
            android:layout_marginBottom="30dp"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:background="@color/darkpurple"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>